T01.1 alteração em elemento do html

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -20,7 +20,7 @@
         <div class="card flex justify-content-center mt-3">
           <button type="submit" pButton pRipple label="Login"></button>
         </div>
-        <span class="flex justify-content-center align-content-center text-align-center mt-3 text-red-600 font-semibold"
+        <span class="flex justify-content-center align-content-center text-align-center mt-3 text-orange-600 font-semibold"
         (click)="loginCard = !loginCard">
         Criar conta
         </span>
@@ -51,7 +51,7 @@
         <div class="card flex justify-content-center mt-3">
           <button type="submit" pButton pRipple label="Criar conta"></button>
         </div>
-        <span class="flex justify-content-center align-content-center text-align-center mt-3 text-red-600 font-semibold"
+        <span class="flex justify-content-center align-content-center text-align-center mt-3 text-orange-600 font-semibold"
         (click)="loginCard = !loginCard">
         Fazer login
         </span>
