--- a/src/styles.scss
+++ b/src/styles.scss
@@ -164,7 +164,7 @@
 
 .exact_route {
   button {
-    background-color: #6372c3 !important;
+    background-color: #fb923c !important;
   }
 
   :host ::ng-deep .p-dropdown {
