--- a/src/app/modules/dashboard/page/dashboard-home/dashboard-home.component.html
+++ b/src/app/modules/dashboard/page/dashboard-home/dashboard-home.component.html
@@ -1,1 +1,13 @@
 <app-toolbar-navigation></app-toolbar-navigation>
+
+<!--Grafico-->
+<div class="grid">
+  <div class="col-12">
+    <p-card
+    header="Quantidade de produtos em estoque"
+    styleClass="shadow-3 m-5 text-orange-800">
+    <p-chart type="bar" [data]="productsChartDatas" [options]="productsChartOptions"></p-chart>
+    </p-card>
+  </div>
+
+</div>
