--- a/src/app/modules/products/components/products-table/products-table.component.html
+++ b/src/app/modules/products/components/products-table/products-table.component.html
@@ -125,7 +125,8 @@
             icon="pi pi-plus"
             label="Adicionar"
             pTooltip="Adicionar produto"
-            tooltipPosition="top">
+            tooltipPosition="top"
+            (onClick)="handleProductEvent(addProductEvent)">
             </p-button>
           </div>
         </th>
@@ -153,6 +154,7 @@
             class="p-button-rounded p-button-warning"
             pTooltip="Editar produto"
             tooltipPosition="top"
+            (click)="handleProductEvent(editProductEvent, product?.id)"
           ></button>
 
         <button
@@ -162,6 +164,7 @@
           class="p-button-rounded p-button-danger"
           pTooltip="Remover produto"
           tooltipPosition="top"
+          (click)="handleDeleteProduct(product?.id, product?.name)"
         ></button>
         </div>
       </td>
