--- a/src/app/modules/products/page/products-home/products-home.component.html
+++ b/src/app/modules/products/page/products-home/products-home.component.html
@@ -1,3 +1,8 @@
 <app-toolbar-navigation></app-toolbar-navigation>
 
-<app-products-table [products]="productsDatas"></app-products-table>
+<app-products-table
+[products]="productsDatas"
+(productEvent)="handleProductAction($event)"
+(deleteProductEvent)="handleDeleteProductAction($event)">
+</app-products-table>
+<p-confirmDialog [style]="{ width: '50vw'}"></p-confirmDialog>
