--- a/src/app/modules/products/components/products-form/products-form.component.html
+++ b/src/app/modules/products/components/products-form/products-form.component.html
@@ -43,8 +43,22 @@
 <!--FORMULÁRIO DO EDITAR PRODUTO-->
 <div *ngIf="productAction?.event?.action === editProductAction">
   <form [formGroup]="editProductForm" (ngSubmit)="handleSubmitEditProduct()">
+
     <div class="card flex flex-column md:flex-column gap-3">
       <input pInputText placeholder="Nome" formControlName="name">
+
+      <!--Categoria do produto-->
+      <div *ngIf="renderDropdown">
+        <p-dropdown
+        styleClass="w-full"
+        [options]="categoriesDatas"
+        [(ngModel)]="selectedCategory"
+        optionLabel="name"
+        optionValue="id"
+        formControlName="category_id">
+        </p-dropdown>
+      </div>
+
       <input pInputText placeholder="Preço" formControlName="price">
       <input pInputText placeholder="Descrição" formControlName="description">
       <input pInputText type="number" placeholder="Quantidade" formControlName="amount">
