--- a/src/app/modules/categories/components/category-form/category-form.component.html
+++ b/src/app/modules/categories/components/category-form/category-form.component.html
@@ -1,6 +1,6 @@
 <div>
   <form [formGroup]="categoryForm"
-  (ngSubmit)="handleSubmitAddCategory()">
+  (ngSubmit)="handleSubmitCategoryAction()">
 
   <div class="card flex flex-column md:flex-column gap-3">
     <input pInputText placeholder="Nome" formControlName="name">
