--- a/src/app/modules/products/components/products-table/products-table.component.html
+++ b/src/app/modules/products/components/products-table/products-table.component.html
@@ -142,7 +142,7 @@
       <td
       [pTooltip]="product?.description"
       tooltipPosition="top">
-      {{ product?.description }}
+      {{ product?.description | shorten: 25}}
     </td>
       <td> {{ product?.category?.name }}</td>
       <td>
