--- a/src/app/modules/products/components/product-form/product-form.component.html
+++ b/src/app/modules/products/components/product-form/product-form.component.html
@@ -73,3 +73,29 @@
     </div>
   </form>
 </div>
+
+<!--FORMULÁRIO DE VENDA DE PRODUTOS-->
+<div *ngIf="productAction?.event?.action === saleProductAction">
+  <form [formGroup]="saleProductForm" (ngSubmit)="handleSubmitSaleProduct()">
+
+    <div class="card flex flex-column md:flex-column gap-3">
+      <p-dropdown
+      [options]="productsDatas"
+      [(ngModel)]="saleProductSelected"
+      styleClass="w-full"
+      optionLabel="name"
+      optionValue="id"
+      placeholder="Selecione um produto"
+      formControlName="product_id">
+      </p-dropdown>
+
+      <input type="number" pInputText placeholder="Quantidade" formControlName="amount">
+
+      <div class="flex flex-row justify-content-center align-content-center align-items-center">
+        <p-button
+          [disabled]="!saleProductForm.valid" type="submit" label="Concluir">
+        </p-button>
+      </div>
+    </div>
+  </form>
+</div>
