--- a/src/app/shared/components/toolbar-navigation/toolbar-navigation.component.html
+++ b/src/app/shared/components/toolbar-navigation/toolbar-navigation.component.html
@@ -26,14 +26,14 @@
   routerLinkActive="exact_route"
   class="mr-2"
   ></p-button>
-
+<!--AQUIIIIII-->
   <p-button
   label="Efetuar Venda"
   icon="pi pi-credit-card"
-  routerLink="/products"
   styleClass="bg-orange-400 p-button-secondary"
-  routerLinkActive="exact_route"
+  routerLink="/products"
   class="mr-2"
+  (onClick)="handleSaleProduct()"
   ></p-button>
 
 </div>
